src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <description>Date for testing scheduled apex job</description>
        <label>Activation_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_Stage__c</fullName>
        <description>Field to hold result from Apex test</description>
        <label>Activation Stage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astro_Location__c</fullName>
        <label>Astro Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <formula>CASE(
  MOD(TODAY() - DATE(1900, 1, 7), 7),
  0,&quot;Sunday&quot;,
  1,&quot;Monday&quot;,
  2,&quot;Tuesday&quot;,
  3,&quot;Wednesday&quot;,
  4,&quot;Thursday&quot;,
  5,&quot;Friday&quot;,
  6,&quot;Saturday&quot;, 
&quot;Error&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question1__c</fullName>
        <label>Question1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question2__c</fullName>
        <label>Question2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_all__c</fullName>
        <label>Survey all</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
        <active>false</active>
        <errorConditionFormula>AND (NOT(ISBLANK(AccountId)),
     
     MailingPostalCode &lt;&gt; Account.ShippingPostalCode)</errorConditionFormula>
        <errorDisplayField>MailingPostalCode</errorDisplayField>
        <errorMessage>Mailing Postal Code must match the account shipping postal code when an account is present</errorMessage>
    </validationRules>
</CustomObject>